syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "GRPC/courierProto";

package courier;

service CourierServer {
  rpc CreateOrder(OrderCourierServer) returns (google.protobuf.Empty) {}
  rpc GetDeliveryService(google.protobuf.Empty) returns (ServiceResponse) {}
}

message OrderCourierServer{
  int64 OrderID = 1;
  int64 CourierServiceID = 2;
  string RestaurantAddress = 3;
  string RestaurantName = 4;
  string ClientAddress = 5;
  string ClientFullName = 6;
  string ClientPhoneNumber = 7;
  google.protobuf.Timestamp DeliveryTime = 8;
  int64 PaymentType = 9;
}

message ServiceResponse {
  repeated DeliveryService services = 1;
}

message DeliveryService {
  int64 ServiceId = 1;
  string ServiceName = 2;
  string ServiceEmail = 3;
  string ServicePhoto = 4;
  string ServiceDescription = 5;
  string ServicePhone = 6;
  int64 ServiceManagerId = 7;
  string ServiceStatus = 8;
}
