syntax = "proto3";

option go_package = "GRPC/courierProto";

package courier;

service CourierServer {
  rpc SendOrderToCourierService(OrderFields) returns (OrderStatusResponse) {}
}

message OrderFields {
  int32 orderId = 1;
  string customerAddress = 2;
  string restaurantAddress = 3;
  string status = 4;
  int32 deliveryServiceId = 5;
}

message OrderStatusResponse {
  int32 orderId = 1;
  string status = 2;
}
